working on desktop header

--- a/dev/sass/partials/_layout.scss
+++ b/dev/sass/partials/_layout.scss
@@ -4,6 +4,9 @@
 ********************************************/
 #desktop-header {
     display: none;
+    @include susy-breakpoint($bp-desktop) {
+        display: block;
+    }
 }
 
 #sticky-header {
